--- a/views/users/deleted.jade
+++ b/views/users/deleted.jade
@@ -1,49 +1,10 @@
--	function render(__str, __data) {
--		Object.keys(__data).forEach(function(key) {
--			__str = __str.replace("{"+key+"}", __data[key].toString());
--		});
--		return __str;
--	}
-
-//- create a standard menu link
-mixin menuLink(__item, __data)
-	- var __data  = __data || {};
-	- var __curr  = __item.url === _Menu.currentURL;
-	- var __url   = __item.url ? (__curr ? null : render(__item.url, __data)) : null;
-	- var __title = render(__item.title, __data);
-	if Array.isArray(__item.dropdown)
-		+menuDropdown(__item, __data)
-	else
-		li(class=__curr ? "active" : null)
-			if Array.isArray(__item.sign)
-				a(href=__url, title=__title)
-					span.hidden-xs(class=__item.sign.join(" "))
-					span.visible-xs!=__title
-			else
-				a(href=__url)!=__title
-
-//- create a menu dropdown item
-mixin menuDropdown(__item, __data)
-	- var __data  = __data || {};
-	li.dropdown
-		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
-			b.caret
-		ul.dropdown-menu
-			each __link in __item.dropdown
-				if __link.title
-					+menuLink(__link, __data)
-				else
-					li.divider
+include ../inc-mixins
 
 doctype html
 html(lang="de")
 	head
-		meta(charset="utf-8")
+		include ../inc-bootstrap
 		title DCM – DSA Charakter Manager
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
-		script(src="//code.jquery.com/jquery-2.1.0.min.js")
-		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		style.
 			.restore {
 				padding: 5px 10px;
@@ -57,28 +18,7 @@ html(lang="de")
 				padding-bottom: 1.5em;
 			}
 	body
-		nav.navbar.navbar-default(role="navigation")
-			.container-fluid
-				.navbar-header
-					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-collapse-chars")
-						span.sr-only Navigation
-						span.icon-bar
-						span.icon-bar
-						span.icon-bar
-					span.navbar-brand DCM
-				#navbar-collapse-chars.collapse.navbar-collapse
-					- var data = _FRCount ? { badge: '<span class="badge">'+_FRCount+'</span>' } : { badge: "" };
-					ul.nav.navbar-nav
-						each __link in _Menu.left
-							+menuLink(__link, data)
-					ul.nav.navbar-nav.navbar-right
-						each __link in _Menu.right
-							+menuLink(__link, data)
-						if _User.isAdmin
-							li
-								a(href="/db", title="Manage DB")
-									span.hidden-xs.fa.fa-hdd-o
-									span.visible-xs Manage DB
+		include inc-nav
 		header.container
 			.page-header.text-center
 				h1
