--- a/views/inc-mixins.jade
+++ b/views/inc-mixins.jade
@@ -64,3 +64,14 @@ mixin menuDropdown(__item, __data)
 					+menuLink(__link, __data)
 				else
 					li.divider
+
+mixin dropdown(__list, __prefix)
+	- var __lock = __prefix === null;
+	-   __prefix = __prefix || "";
+	each __val, __key in __list
+		if Array.isArray(__val)
+			- __prefix = __lock ? "" : __key+" / "
+			optgroup(label=__key)
+				+dropdown(__val, __prefix)
+		else
+			option(value=__prefix+__val)=__val
