--- a/views/edit-held/talente.jade
+++ b/views/edit-held/talente.jade
@@ -22,21 +22,21 @@ mixin talentTable(__group, __name)
 		- var __heldentalent = getTalent(_Held.Talente.__name, {talent:__talent.name})
 		- var __isAvailable  = isAvailable(_Held.Talente.__name, __talent)
 		li.list-group-item
-			.row(data-name="Talente.#{__name}[#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
+			.row(data-name="Talente[#{__name}][#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
 				.col-xs-1
-					input.unlock(type="hidden", name="Talente.#{__name}[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+					input.unlock(type="hidden", name="Talente[#{__name}][#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
 					if __talent.standard
-						input(type="hidden", name="Talente.#{__name}[#{__idx}][name]", value=__talent.name)
+						input(type="hidden", name="Talente[#{__name}][#{__idx}][name]", value=__talent.name)
 					else
-						input.isactive(type="checkbox", name="Talente.#{__name}[#{__idx}][name]", value=__talent.name, id=__name+__idx, checked=__isAvailable)
+						input.isactive(type="checkbox", name="Talente[#{__name}][#{__idx}][name]", value=__talent.name, id=__name+__idx, checked=__isAvailable)
 				.col-xs-5.col-sm-7.col-lg-9.text-left
 					label(for=__name+__idx)=__talent.name
 				.col-xs-3.col-sm-2.col-lg-1
-					select.unlock(size="1", name="Talente.#{__name}[#{__idx}][Lernstufe]", disabled=!__isAvailable)
+					select.unlock(size="1", name="Talente[#{__name}][#{__idx}][Lernstufe]", disabled=!__isAvailable)
 						each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 							option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 				.col-xs-3.col-sm-2.col-lg-1
-					input.unlock(type="number", name="Talente.#{__name}[#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+					input.unlock(type="number", name="Talente[#{__name}][#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
 	.panel-footer.text-center
 		button.btn.btn-default(type="submit") speichern
 
@@ -104,23 +104,23 @@ html(lang="de")
 						- var __heldentalent = getTalent(_Held.Talente.Nahkampf, {talent:__talent.name})
 						- var __isAvailable  = isAvailable(_Held.Talente.Nahkampf, __talent)
 						li.list-group-item
-							.row(data-name="Talente.Nahkampf[#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
+							.row(data-name="Talente[Nahkampf][#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Nahkampf[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente[Nahkampf][#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Nahkampf[#{__idx}][name]", value=__talent.name)
+										input(type="hidden", name="Talente[Nahkampf][#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Nahkampf[#{__idx}][name]", value=__talent.name, id="nk"+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente[Nahkampf][#{__idx}][name]", value=__talent.name, id="nk"+__idx, checked=__isAvailable)
 								.col-xs-11.col-sm-4.text-left
 									label(for="nk"+__idx)=__talent.name
 								.col-xs-3.col-sm-2
-									select.unlock(size="1", name="Talente.Nahkampf[#{__idx}][Lernstufe]", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente[Nahkampf][#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2
-									input.nk-at.unlock(type="number", name="Talente.Nahkampf[#{__idx}][AT]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+									input.nk-at.unlock(type="number", name="Talente[Nahkampf][#{__idx}][AT]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
 								.col-xs-3.col-sm-2
-									input.nk-pa.unlock(type="number", name="Talente.Nahkampf[#{__idx}][PA]", min="0", max="20", step="1", value=__heldentalent.PA, disabled=!__isAvailable)
+									input.nk-pa.unlock(type="number", name="Talente[Nahkampf][#{__idx}][PA]", min="0", max="20", step="1", value=__heldentalent.PA, disabled=!__isAvailable)
 								.col-xs-3.col-sm-1.nk-taw.text-center=__heldentalent.AT+__heldentalent.PA
 
 				section#Fernkampf.tab-pane.panel.panel-default.text-center
@@ -134,21 +134,21 @@ html(lang="de")
 						- var __heldentalent = getTalent(_Held.Talente.Fernkampf, {talent:__talent.name})
 						- var __isAvailable  = isAvailable(_Held.Talente.Fernkampf, __talent)
 						li.list-group-item
-							.row(data-name="Talente.Fernkampf[#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
+							.row(data-name="Talente[Fernkampf][#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Fernkampf[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente[Fernkampf][#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Fernkampf[#{__idx}][name]", value=__talent.name)
+										input(type="hidden", name="Talente[Fernkampf][#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Fernkampf[#{__idx}][name]", value=__talent.name, id=__name+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente[Fernkampf][#{__idx}][name]", value=__talent.name, id=__name+__idx, checked=__isAvailable)
 								.col-xs-5.col-sm-7.col-lg-9.text-left
 									label(for=__name+__idx)=__talent.name
 								.col-xs-3.col-sm-2.col-lg-1
-									select.unlock(size="1", name="Talente.Fernkampf[#{__idx}][Lernstufe]", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente[Fernkampf][#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2.col-lg-1
-									input.unlock(type="number", name="Talente.Fernkampf[#{__idx}][AT]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+									input.unlock(type="number", name="Talente[Fernkampf][#{__idx}][AT]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
 
 				section#Koerper.tab-pane.panel.panel-default.text-center
 					+talentTable(_körperlich, "körperlich")
@@ -179,21 +179,21 @@ html(lang="de")
 						li.list-group-item
 							.row
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Sprachen[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
-									input.unlock(type="hidden", name="Talente.Sprachen[#{__idx}][Komplexität]", value=__talent.komplexität, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente[Sprachen][#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente[Sprachen][#{__idx}][Komplexität]", value=__talent.komplexität, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Sprachen[#{__idx}][name]", value=__talent.name)
+										input(type="hidden", name="Talente[Sprachen][#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Sprachen[#{__idx}][name]", value=__talent.name, id="spr"+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente[Sprachen][#{__idx}][name]", value=__talent.name, id="spr"+__idx, checked=__isAvailable)
 								.col-xs-4.col-sm-6.col-lg-8.text-left
 									label(for="spr"+__idx)=__talent.name
 								.col-xs-1=__talent.komplexität
 								.col-xs-3.col-sm-2.col-lg-1
-									select.unlock(size="1", name="Talente.Sprachen[#{__idx}][Lernstufe]", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente[Sprachen][#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2.col-lg-1
-									input.unlock(type="number", name="Talente.Sprachen[#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
+									input.unlock(type="number", name="Talente[Sprachen][#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
 
 				section#Schriften.tab-pane.panel.panel-default.text-center
 					.panel-heading
@@ -209,48 +209,25 @@ html(lang="de")
 						li.list-group-item
 							.row
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Schriften[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
-									input.unlock(type="hidden", name="Talente.Schriften[#{__idx}][Komplexität]", value=__talent.komplexität, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente[Schriften][#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente[Schriften][#{__idx}][Komplexität]", value=__talent.komplexität, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Schriften[#{__idx}][name]", value=__talent.name)
+										input(type="hidden", name="Talente[Schriften][#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Schriften[#{__idx}][name]", value=__talent.name, id="scr"+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente[Schriften][#{__idx}][name]", value=__talent.name, id="scr"+__idx, checked=__isAvailable)
 								.col-xs-4.col-sm-6.col-lg-8.text-left
 									label(for="scr"+__idx)=__talent.name
 								.col-xs-1=__talent.komplexität
 								.col-xs-3.col-sm-2.col-lg-1
-									select.unlock(size="1", name="Talente.Schriften[#{__idx}][Lernstufe]", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente[Schriften][#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2.col-lg-1
-									input.unlock(type="number", name="Talente.Schriften[#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
+									input.unlock(type="number", name="Talente[Schriften][#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
 
 				section#Gaben.tab-pane.panel.panel-default.text-center
-					.panel-heading
-						.row
-							.col-xs-6.col-sm-8.col-lg-10 Gaben
-							.col-xs-3.col-sm-2.col-lg-1 Lern
-							.col-xs-3.col-sm-2.col-lg-1 TaW
-					ul.list-group
-					each __talent, __idx in _Gaben
-						- var __heldentalent = getTalent(_Held.Talente.Gaben, {talent:__talent.name})
-						- var __isAvailable  = isAvailable(_Held.Talente.Gaben, __talent)
-						li.list-group-item
-							.row(data-name="Talente.Gaben[#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
-								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Gaben[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
-									if __talent.standard
-										input(type="hidden", name="Talente.Gaben[#{__idx}][name]", value=__talent.name)
-									else
-										input.isactive(type="checkbox", name="Talente.Gaben[#{__idx}][name]", value=__talent.name, id="fk"+__idx, checked=__isAvailable)
-								.col-xs-5.col-sm-7.col-lg-9.text-left
-									label(for="fk"+__idx)=__talent.name
-								.col-xs-3.col-sm-2.col-lg-1
-									select.unlock(size="1", name="Talente.Gaben[#{__idx}][Lernstufe]", disabled=!__isAvailable)
-										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
-								.col-xs-3.col-sm-2.col-lg-1
-									input.unlock(type="number", name="Talente.Gaben[#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+					+talentTable(_Gaben, "Gaben")
+				
 				#save.row.well
 					.col-xs-6.col-xs-offset-3.col-sm-4.col-sm-offset-4.text-center
 						button.btn.btn-success.form-control(type="submit", disabled) speichern
